--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -28,7 +28,7 @@ spring:
       # Max Request Size
       max-request-size: 215MB
   datasource:
-    url: jdbc:postgresql://localhost:5432/test
+    url: jdbc:postgresql://localhost:5432/ontll_db
     username: postgres
     password: postgres
     platform: postgres
@@ -41,7 +41,7 @@ spring:
       hibernate:
         jdbc.lob.non_contextual_creation: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        default_schema: issue
+        default_schema: partcv
   jackson:
     default-property-inclusion: NON_NULL
     deserialization:
