--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <skip.unit.tests>false</skip.unit.tests>
         <skip.integration.tests>true</skip.integration.tests>
         <gatling.plugin.version>3.0.2</gatling.plugin.version>
+        <version.sonar-maven-plugin>3.4.0.905</version.sonar-maven-plugin>
     </properties>
 
     <dependencies>
@@ -316,7 +317,7 @@
                 </configuration>
             </plugin>
 
-            <!--           <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
@@ -331,19 +332,19 @@
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
-            </plugin>-->
-            <!--      <plugin>
-                      <groupId>org.owasp</groupId>
-                      <artifactId>dependency-check-maven</artifactId>
-                      <version>5.3.1</version>
-                      <executions>
-                          <execution>
-                              <goals>
-                                  <goal>check</goal>
-                              </goals>
-                          </execution>
-                      </executions>
-                  </plugin>-->
+            </plugin>
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>5.3.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
