--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <skip.unit.tests>false</skip.unit.tests>
         <skip.integration.tests>true</skip.integration.tests>
         <gatling.plugin.version>3.0.2</gatling.plugin.version>
-        <version.sonar-maven-plugin>3.4.0.905</version.sonar-maven-plugin>
+        <sonar.java.source>11</sonar.java.source>
     </properties>
 
     <dependencies>
